gcc/testsuite/gm2/iso/pass/subassign.mod
MODULE subassign ;

VAR
   card : CARDINAL ;
   month: [1..12] ;
BEGIN
   month := card
END subassign.
