gcc/testsuite/gm2/iso/fail/badset2.mod
MODULE badset2 ;

TYPE
   userset = SET OF CHAR ;
VAR
   set: userset ;
BEGIN
   set := set {}
END badset2.
